--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Mon, 06 Oct 2025 07:20:08 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Fear Footage 2: Curse of the Tape 2020 1080p WEBRip-YTS (1.2GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/gi9vezrv1rdq
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Mon, 06 Oct 2025 07:40:04 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Block AU S21E41 720p HEVC x265-MeGusta (440MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d28yjd2b1iaq&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Block AU S21E41 720p HEVC x265-MeGusta &lt;br&gt;[RR/NF/CU]Size: 440MB mkv HEVC (MAIN 10) / AC3 HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Block" itemprop="image" longdesc="/i/0418372" src="https://rmz.cr/data/images/movies/2025-08/the-block.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: Nine Network&lt;br&gt;Original Language: English&lt;br&gt;Country: Australia&lt;br&gt;Cast: Scott Cam, Keith Schleiger, Shelley Craft&lt;br&gt;Directed By: Harry Falk&lt;br&gt;Created By: David Barbour, Julian Cress&lt;br&gt;Genre: Game-Show | Reality-TV&lt;br&gt;The Block (2003-)&lt;br&gt;Storyline:
+                            Couples compete to renovate rundown buildings into high-end apartments and sell them at auction for the highest price to receive a prize of $100,000.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt0418372" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt0418372/" target="_blank"&gt;http://www.imdb.com/title/tt0418372/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) AC3 &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Mon, 06 Oct 2025 11:34:37 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-block-au-s21e41-720p-hevc-x265-megusta</guid></item><item><title>Simon Amstell: Set Free 2019 720p WEBRip-YTS (478MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d89pfo3sambg
+https://clicknupload.one/6aemk967fybv
+https://clicknupload.one/6r58t6e9nyj2
+https://clicknupload.one/b7n8zspu4nc4
+https://clicknupload.one/jg1wmufsqxg8
+https://clicknupload.one/8um6dc9timqg
+https://clicknupload.one/0giwqvlwtnxk
+https://clicknupload.one/hiyupbslqw3y
+https://clicknupload.one/51nyh108exj3
+https://clicknupload.one/fbdfzfhbvljb
+https://clicknupload.one/r6k4at8myt0u
+https://clicknupload.one/s3vj1nx2d307
+https://clicknupload.one/n7tda2bll86u
+https://clicknupload.one/wz6pb85yx7nh
+https://clicknupload.one/mwwg9nk5af1p
+https://clicknupload.one/vch8au7fsktl
+https://clicknupload.one/i1hu5ibknla9
+https://clicknupload.one/m9dmsaflaayy
+https://clicknupload.one/pfdwpj8n87xv
+https://clicknupload.one/kygt390smbug
+https://clicknupload.one/zhzm31q6vcv9
+https://clicknupload.one/38svwn7nmplk
+https://clicknupload.one/shac18e8j85n
+https://clicknupload.one/zq0psv56oo5g
+https://clicknupload.one/wmp7ra546il0
+https://clicknupload.one/5pn000vn2x7g
+https://clicknupload.one/zimnchu62717
+https://clicknupload.one/6ekuub3v84v3
+https://clicknupload.one/708xopzn90id
+https://clicknupload.one/hxm1pi3c6eyv
+https://clicknupload.one/lvhilukby9k2&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Simon Amstell: Set Free 2019 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 478MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x640 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Simon Amstell: Set Free" itemprop="image" longdesc="/i/10687642" src="https://rmz.cr/data/images/movies/2025-10/simon-amstell--set-free.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United Kingdom&lt;br&gt;Cast: Simon Amstell&lt;br&gt;Directed By: Julia Knowles&lt;br&gt;Genre: Comedy&lt;br&gt;Simon Amstell: Set Free (2019)&lt;br&gt;Storyline:
+                            Comedies Honest, introspective comic Simon Amstell digs deep and delivers a uniquely vulnerable stand-up set on love, ego, intimacy and ayahuasca.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt10687642" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt10687642/" target="_blank"&gt;http://www.imdb.com/title/tt10687642/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x640&lt;/pre&gt;</description><pubDate>Mon, 06 Oct 2025 11:31:08 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/simon-amstell-set-free-2019-720p-webrip-yts</guid></item><item><title>Casper and Wendy's Ghostly Adventures 2002 720p WEBRip-YTS (776MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/no7uca6ad9el&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Casper and Wendy's Ghostly Adventures 2002 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 776MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1136x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Casper and Wendy's Ghostly Adventures" itemprop="image" longdesc="/i/0365033" src="https://rmz.cr/data/images/movies/2025-10/casper-and-wendy-s-ghostly-adventures.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: USA&lt;br&gt;MPAA Rate: TV-G&lt;br&gt;Cast: Jackson Beck, Bradley Bolke, Gilbert Mack&lt;br&gt;Genre: Animation | Adventure | Comedy | Family | Fantasy&lt;br&gt;Casper and Wendy's Ghostly Adventures (2002)&lt;br&gt;Storyline:
+                            "Casper and Wendy's Ghostly Adventures" shows various cartoons of the friendly ghost and his best friend at their best.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt0365033" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt0365033/" target="_blank"&gt;http://www.imdb.com/title/tt0365033/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1136x720&lt;/pre&gt;</description><pubDate>Mon, 06 Oct 2025 11:22:29 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/casper-and-wendys-ghostly-adventures-2002-720p-webrip-yts</guid></item><item><title>The Fear Footage 2: Curse of the Tape 2020 1080p WEBRip-YTS (1.2GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/gi9vezrv1rdq
 https://clicknupload.one/7sh1y6ykpoam
 https://clicknupload.one/5sfto0zjmp9w
 https://clicknupload.one/difb63oqxxe0&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Fear Footage 2: Curse of the Tape 2020 1080p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 1.2GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Fear Footage 2: Curse of the Tape" itemprop="image" longdesc="/i/11323964" src="https://rmz.cr/data/images/movies/2025-10/the-fear-footage-2--curse-of-the-tape.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Directed By: Ricky Umberger&lt;br&gt;Genre: Horror&lt;br&gt;The Fear Footage 2: Curse of the Tape (2020)&lt;br&gt;Storyline:
