--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Wed, 08 Oct 2025 07:20:08 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Caramelo 2025 1080p WEBRip 5.1-YTS (1.9GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/hojb6axg346e
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Wed, 08 Oct 2025 07:40:04 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Rudolph the Red Nosed Reindeer 1964 1080p BluRay DD5.1 HEVC x265-RMTeam (865MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/n4m5tlrnpvud&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Rudolph the Red Nosed Reindeer 1964 1080p BluRay DD5.1 HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 865MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Rudolph the Red-Nosed Reindeer" itemprop="image" longdesc="/i/0058536" src="https://rmz.cr/data/images/movies/2024-06/rudolph-the-red-nosed-reindeer.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States, Canada, Japan&lt;br&gt;MPAA Rate: Approved&lt;br&gt;Cast: Billie Mae Richards, Burl Ives, Larry D. Mann&lt;br&gt;Directed By: Larry Roemer&lt;br&gt;Genre: Animation | Adventure | Comedy&lt;br&gt;Rudolph the Red-Nosed Reindeer (1964)&lt;br&gt;Storyline:
+                            A young reindeer Rudolph lives at the North Pole. His father is one of Santa's reindeer and it is expected that Rudolph will eventually be one too. However, he has a feature which is a setback and causes him to be ostracized: his ...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt0058536" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt0058536/" target="_blank"&gt;http://www.imdb.com/title/tt0058536/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 11:34:46 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/rudolph-the-red-nosed-reindeer-1964-1080p-bluray-dd51-hevc-x265-rmteam</guid></item><item><title>Antiques Roadshow US S29E21 1080p HEVC x265-MeGusta (512MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/van7072az7fs&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Antiques Roadshow US S29E21 1080p HEVC x265-MeGusta &lt;br&gt;[RR/NF/CU]Size: 512MB mkv HEVC (MAIN 10) / AAC (LC) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Antiques Roadshow" itemprop="image" longdesc="/i/0159847" src="https://rmz.cr/data/images/movies/2022-03/antiques-roadshow.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: PBS&lt;br&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: TV-G&lt;br&gt;Cast: Mark L. Walberg, Simeon Lipman, Nicholas D. Lowry&lt;br&gt;Directed By: John Boyle&lt;br&gt;Genre: Reality-TV&lt;br&gt;Antiques Roadshow (1997-)&lt;br&gt;Storyline:
+                            Collectors discover that they can turn trash into treasure, thanks to the appraisal skills of the show's specialists in antiques and fine art; Mark L. Walberg hosts.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt0159847" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt0159847/" target="_blank"&gt;http://www.imdb.com/title/tt0159847/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 11:28:41 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/antiques-roadshow-us-s29e21-1080p-hevc-x265-megusta</guid></item><item><title>Him 2025 1080p WEBRip x265 10bit 5.1-YTS (1.6GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/o1x4e4pbqrnm
+https://clicknupload.one/1pcirxh9915w
+https://clicknupload.one/8trhbvt7k6gd
+https://clicknupload.one/agodobyff6e3
+https://clicknupload.one/eygk9k6261t6&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Him 2025 1080p WEBRip x265 10bit 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.6GB mp4 HEVC (MAIN 10) (HEV1) / AAC (LC) (MP4A) HD 1920x804 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Him" itemprop="image" longdesc="/i/20990442" src="https://rmz.cr/data/images/movies/2025-09/him.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: R&lt;br&gt;Directed By: Justin Tipping&lt;br&gt;Genre: Horror | Sport&lt;br&gt;Him (2025)&lt;br&gt;Storyline:
+                            A young athlete descends into a world of terror when he's invited to train with a legendary champion whose charisma curdles into something darker.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt20990442" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt20990442/" target="_blank"&gt;http://www.imdb.com/title/tt20990442/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) (HEV1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x804&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 11:25:32 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/him-2025-1080p-webrip-x265-10bit-51-yts</guid></item><item><title>Caramelo 2025 1080p WEBRip 5.1-YTS (1.9GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/hojb6axg346e
 https://clicknupload.one/00n9q291v03u
 https://clicknupload.one/kpu0gn4r1mba
 https://clicknupload.one/717khlv3dm10
@@ -242,42 +252,4 @@ https://clicknupload.one/ngdomgf6fsvv
 https://clicknupload.one/6x884l483xpu
 https://clicknupload.one/o6y91jvyk1tj&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Drowned 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 778MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x534 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Drowned" itemprop="image" longdesc="/i/21289618" src="https://rmz.cr/data/images/movies/2025-10/the-drowned.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United Kingdom&lt;br&gt;Cast: Alan Calton, Michelangelo Fortuzzi, Corrinne Wicks&lt;br&gt;Directed By: Samuel Clemens&lt;br&gt;The Drowned (2025)&lt;br&gt;Storyline:
                             After pulling off an art heist, three men arrive at a secluded coastal safe house to discover their fourth accomplice missing. Was one of them responsible, or is there a malevolent ancient myth lurking at the water's edge?&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt21289618" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt21289618/" target="_blank"&gt;http://www.imdb.com/title/tt21289618/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x534&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 08:30:55 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-drowned-2025-720p-webrip-yts</guid></item><item><title>Maintenance Required 2025 720p WEBRip-YTS (948MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/uriijv2s5wzw
-https://clicknupload.one/7fnw8ccez31z
-https://clicknupload.one/rls6rw46utmj
-https://clicknupload.one/nqgj9zqh98ty
-https://clicknupload.one/4zmms6tg8fka
-https://clicknupload.one/kfukqimovn5i
-https://clicknupload.one/5ssv5b97d2zi
-https://clicknupload.one/ktsh4r3979o5
-https://clicknupload.one/fn6wkbymdw2l
-https://clicknupload.one/qzdpukt2ljai
-https://clicknupload.one/ogr2uu1ye3m6
-https://clicknupload.one/hjbvftvbz81l
-https://clicknupload.one/j45gcqgajvjj
-https://clicknupload.one/kx9lpbfoeg0d
-https://clicknupload.one/8a9wjmfux2pm
-https://clicknupload.one/x2t8fbt6jafp
-https://clicknupload.one/yqa7y2azokpc
-https://clicknupload.one/0fw38im4qqn0
-https://clicknupload.one/c1k7jzanihc0
-https://clicknupload.one/b2wgvtaqfv0v
-https://clicknupload.one/tb2gbpken60c
-https://clicknupload.one/x68pqngy3pet
-https://clicknupload.one/4unwlr6skf3t
-https://clicknupload.one/9wuuom9odyu8
-https://clicknupload.one/0gxn2xyin6gf
-https://clicknupload.one/b0qljki06xmo
-https://clicknupload.one/0jphclh2m9gr
-https://clicknupload.one/eibf72q5i91v
-https://clicknupload.one/mryo66mygyop
-https://clicknupload.one/66o3nh6vj7s0
-https://clicknupload.one/veehg2fx8sa2
-https://clicknupload.one/7wvzgwglulzi
-https://clicknupload.one/lv4q9tzn1usp
-https://clicknupload.one/fpij7vcw0pav
-https://clicknupload.one/j59y9ml2tllp
-https://clicknupload.one/an1zofwq1x75
-https://clicknupload.one/3m9qse1icaai&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Maintenance Required 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 948MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x534 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Maintenance Required" itemprop="image" longdesc="/i/33335602" src="https://rmz.cr/data/images/movies/2025-10/maintenance-required.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States, United Kingdom&lt;br&gt;MPAA Rate: PG-13&lt;br&gt;Genre: Comedy | Romance&lt;br&gt;Maintenance Required (2025)&lt;br&gt;Storyline:
-                            Charlie, forced to reevaluate her all-female mechanic shop, unknowingly confides in her online confidant Beau, who turns out to be her real-life business rival, their connection blossoms amidst professional rivalry.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt33335602" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt33335602/" target="_blank"&gt;http://www.imdb.com/title/tt33335602/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x534&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 08:29:40 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/maintenance-required-2025-720p-webrip-yts</guid></item></channel></rss>
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x534&lt;/pre&gt;</description><pubDate>Wed, 08 Oct 2025 08:30:55 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-drowned-2025-720p-webrip-yts</guid></item></channel></rss>
