--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 10 Oct 2025 22:40:04 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Psychopath Life Coach 2023 720p WEBRip-YTS (798MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/m3aq21dc2839
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 10 Oct 2025 23:00:04 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Alabama Solution 2025 720p WEBRip-YTS (1GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/qutubrns5h1b
+https://clicknupload.one/e4fm3wo0h1bc
+https://clicknupload.one/6ztbewc90zrf
+https://clicknupload.one/tmevs53hhvod
+https://clicknupload.one/rodr0se39kny
+https://clicknupload.one/inh0oqbr2c6i
+https://clicknupload.one/x20zdwp8lby1
+https://clicknupload.one/y5t2buvk49dh
+https://clicknupload.one/317n1s3qjpv7
+https://clicknupload.one/xgto83qp9r1x
+https://clicknupload.one/m1d3roa3wzav
+https://clicknupload.one/d4jyg4t9ky8a
+https://clicknupload.one/vt016kk90hbg
+https://clicknupload.one/os6900po1xy1
+https://clicknupload.one/0gpbtf3b352t
+https://clicknupload.one/vqwwf10en8k7
+https://clicknupload.one/1fgsi3w3p682
+https://clicknupload.one/grgo0y4mxuti
+https://clicknupload.one/9y7r53u0zeep
+https://clicknupload.one/tjt0pb6h3amw
+https://clicknupload.one/ok6kvtqlvj2m
+https://clicknupload.one/005tgf5cqjp2
+https://clicknupload.one/js68av9zrqtz
+https://clicknupload.one/kr0gu74yevp5
+https://clicknupload.one/xdt7orilpfnx
+https://clicknupload.one/bosyfm337k1z
+https://clicknupload.one/c3zh4gqhow9n
+https://clicknupload.one/gayh9nvrp2mw
+https://clicknupload.one/tag2lbmu2tbi
+https://clicknupload.one/faeq28e3olqm
+https://clicknupload.one/ty16dpw55x22
+https://clicknupload.one/xzloe6qaxsz1
+https://clicknupload.one/ngji6tpoz10x
+https://clicknupload.one/7ivotrsrdjw1
+https://clicknupload.one/y36atwmds7cq
+https://clicknupload.one/lnjbaogvshax
+https://clicknupload.one/mocen1gtn1uj&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Alabama Solution 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 1GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Alabama Solution" itemprop="image" longdesc="/i/35307139" src="https://rmz.cr/data/images/movies/2025-10/the-alabama-solution.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: TV-MA&lt;br&gt;Genre: Documentary&lt;br&gt;The Alabama Solution (2025)&lt;br&gt;Storyline:
+                            Incarcerated men defy the odds to expose a cover-up in one of America's deadliest prison systems.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt35307139" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt35307139/" target="_blank"&gt;http://www.imdb.com/title/tt35307139/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 02:52:52 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-alabama-solution-2025-720p-webrip-yts</guid></item><item><title>The Psychopath Life Coach 2023 720p WEBRip-YTS (798MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/m3aq21dc2839
 https://clicknupload.one/nukf78afmbgb&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Psychopath Life Coach 2023 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 798MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Psychopath Life Coach" itemprop="image" longdesc="/i/28328452" src="https://rmz.cr/data/images/movies/2025-10/the-psychopath-life-coach.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United Kingdom&lt;br&gt;MPAA Rate: 16+&lt;br&gt;Genre: Documentary&lt;br&gt;The Psychopath Life Coach (2023)&lt;br&gt;Storyline:
                             The journey and life story of criminal turned life coach Lewis Raymond Taylor.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt28328452" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt28328452/" target="_blank"&gt;http://www.imdb.com/title/tt28328452/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 02:24:01 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-psychopath-life-coach-2023-720p-webrip-yts</guid></item><item><title>The Crooked Man 2016 720p WEBRip-YTS (807MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/mcw4vahtwhbe
