--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sat, 11 Oct 2025 17:00:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Only We Know 2025 1080p WEBRip-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/j1rgluh0nrzj
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sat, 11 Oct 2025 17:20:04 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Clotilda: The Return Home 2024 720p WEBRip-YTS (407MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/huhcliberfo7
+https://clicknupload.one/27ekodtqawh3
+https://clicknupload.one/jlckjw5m7ajl
+https://clicknupload.one/v8pnne56p659
+https://clicknupload.one/ltnb7bc5jwih
+https://clicknupload.one/g2prpncnvzm9
+https://clicknupload.one/fdunkur04zf0
+https://clicknupload.one/84ew19jrplb9&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Clotilda: The Return Home 2024 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 407MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Clotilda: The Return Home" itemprop="image" longdesc="/i/32421469" src="https://rmz.cr/data/images/movies/2025-10/clotilda--the-return-home.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Genre: Documentary&lt;br&gt;Clotilda: The Return Home (2024)&lt;br&gt;Storyline:
+                            Descendants of Cudjo Lewis and Gumpa Lee, survivors of the last American slave ship, embark on a journey to fulfill their ancestors' dream of returning to their ancestral home, accompanied by National Geographic Explorer Tara Robe...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt32421469" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt32421469/" target="_blank"&gt;http://www.imdb.com/title/tt32421469/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 21:05:24 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/clotilda-the-return-home-2024-720p-webrip-yts</guid></item><item><title>Only We Know 2025 1080p WEBRip-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/j1rgluh0nrzj
 https://clicknupload.one/2qe51iblp59v
 https://clicknupload.one/1k8p78kll35l
 https://clicknupload.one/8t942500ol07
