--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sat, 11 Oct 2025 23:40:06 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Todd Barry: Spicy Honey 2017 720p WEBRip-YTS (561MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/4b34nu7w96gd
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sun, 12 Oct 2025 00:00:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Rainmaker S01E09 1080p WEB-DL HEVC x265-RMTeam (461MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/uwb2kyfc69ck&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Rainmaker S01E09 1080p WEB-DL HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 461MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Rainmaker" itemprop="image" longdesc="/i/6151526" src="https://rmz.cr/data/images/movies/2025-08/the-rainmaker.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: usa network&lt;br&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Genre: Crime | Drama | Thriller&lt;br&gt;The Rainmaker (2025-)&lt;br&gt;Storyline:
+                            Based on the 1995 novel by John Grisham, the series follows a young lawyer who finds himself trapped by the dangerous firm that has hired him.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt6151526" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt6151526/" target="_blank"&gt;http://www.imdb.com/title/tt6151526/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sun, 12 Oct 2025 03:52:53 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-rainmaker-s01e09-1080p-web-dl-hevc-x265-rmteam</guid></item><item><title>Sergio 2009 1080p WEBRip 5.1-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/eqjgw95150jr
+https://clicknupload.one/vbgpxvmoy60t
+https://clicknupload.one/b72wrcusjuiq
+https://clicknupload.one/7oayb4umxgjv
+https://clicknupload.one/yxv5o7lrfz99
+https://clicknupload.one/w89owkbyg3z7
+https://clicknupload.one/kexj2qpzhi83
+https://clicknupload.one/9h8ghejk5bvt&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Sergio 2009 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.7GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Sergio" itemprop="image" longdesc="/i/1333656" src="https://rmz.cr/data/images/movies/2025-10/sergio.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Spanish, Portuguese, French, English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: Not Rated&lt;br&gt;Genre: Documentary | Biography&lt;br&gt;Sergio (2009)&lt;br&gt;Storyline:
+                            A look at the life and work of United Nations High Commissioner for Human Rights, Sergio Vieira de Mello, and the rescue operation when he was trapped and injured by a bomb explosion at UN headquarters in Baghdad.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt1333656" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt1333656/" target="_blank"&gt;http://www.imdb.com/title/tt1333656/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sun, 12 Oct 2025 03:43:42 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/sergio-2009-1080p-webrip-51-yts</guid></item><item><title>Todd Barry: Spicy Honey 2017 720p WEBRip-YTS (561MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/4b34nu7w96gd
 https://clicknupload.one/103iy0xrk6r5
 https://clicknupload.one/5seelwjv95ec
 https://clicknupload.one/00ho9wmnorg1
@@ -147,29 +158,4 @@ https://clicknupload.one/ro3kvrjdy185
 https://clicknupload.one/4cai07xwzmsp
 https://clicknupload.one/wsqxks8r3r8a&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Parade: Queer Acts of Love  Resistance 2025 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.8GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1818x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Parade: Queer Acts of Love &amp;amp; Resistance" itemprop="image" longdesc="/i/36402660" src="https://rmz.cr/data/images/movies/2025-07/parade--queer-acts-of-love--amp--resistance.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: Canada&lt;br&gt;Directed By: Noam Gonick&lt;br&gt;Genre: Documentary&lt;br&gt;Parade: Queer Acts of Love  Resistance (2025)&lt;br&gt;Storyline:
                             Through rarely seen archival footage and first-person accounts, Parade brings to life pivotal moments that sparked Canada's 2SLGBTQ+ movement, honouring the activists and elders whose resistance led to the rights we have today.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt36402660" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt36402660/" target="_blank"&gt;http://www.imdb.com/title/tt36402660/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1818x1080&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 20:34:23 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/parade-queer-acts-of-love-resistance-2025-1080p-webrip-51-yts</guid></item><item><title>Frankie Qui単ones: Damn That's Crazy 2025 1080p WEBRip 5.1-YTS (932MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/lnos5fj2rcgs
-https://clicknupload.one/rg251welnvio
-https://clicknupload.one/pi3un30z9ln3
-https://clicknupload.one/vrbfau79hody
-https://clicknupload.one/9cfrosgo1lbg
-https://clicknupload.one/66vmmve9xj3w
-https://clicknupload.one/p0kxv3n5czjf
-https://clicknupload.one/pptw7ymab848
-https://clicknupload.one/gvmalvxd5kzr
-https://clicknupload.one/bxlacman6jc3
-https://clicknupload.one/oedfu22xl9fz
-https://clicknupload.one/zktcob7fz3fs
-https://clicknupload.one/vhhuf5nke8vi
-https://clicknupload.one/tj66lpxzqip2
-https://clicknupload.one/cv31uiwxh6xy
-https://clicknupload.one/tka10j3bckba
-https://clicknupload.one/0k3aaq2i4tkn
-https://clicknupload.one/w8dchqlnwt4j
-https://clicknupload.one/fkp3p4ghhdef
-https://clicknupload.one/062w5m7vfh6m
-https://clicknupload.one/0tja02ameegn
-https://clicknupload.one/qlzf20pwazd9
-https://clicknupload.one/a207lhftvt11
-https://clicknupload.one/rwk0ffc9po7r&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Frankie Quiñones: Damn That's Crazy 2025 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 932MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Frankie Quiñones: Damn That's Crazy" itemprop="image" longdesc="/i/34601055" src="https://rmz.cr/data/images/movies/2025-10/frankie-qui--ones--damn-that-s-crazy.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: hulu&lt;br&gt;Genre: Comedy&lt;br&gt;Frankie Quiñones: Damn That's Crazy (2025)&lt;br&gt;Storyline:
-                            Frankie Quiñones performs stand-up about love, addiction, and navigating the political dynamics of family barbecues.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt34601055" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt34601055/" target="_blank"&gt;http://www.imdb.com/title/tt34601055/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 20:22:11 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/frankie-quinones-damn-thats-crazy-2025-1080p-webrip-51-yts</guid></item></channel></rss>
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1818x1080&lt;/pre&gt;</description><pubDate>Sat, 11 Oct 2025 20:34:23 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/parade-queer-acts-of-love-resistance-2025-1080p-webrip-51-yts</guid></item></channel></rss>
